--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,88 @@
-# Compiled class file
-*.class
+# NEW IGNORE FILES
 
-# Log file
-*.log
+# Config Files
+*.ini
 
-# BlueJ files
-*.ctxt
+# Binary Files
+*.dat
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Addition
+# Ignore all temporary files in the root directory
+*.[oa]
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# Single Module Project
+/.externalToolBuilders/
+/.settings/
+/.metadata/
+/.recommenders/
+/target/
+/bin/
+/build/
+/doc/
+/lib/
+/test-output/
+/allure-results/
+/.classpath
+/.project
+/.checkstyle
+/reports/
+/.idea/
+*.iml
+*.ucls
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# Multi Modules Project
+/**/.externalToolBuilders/
+/**/.settings/
+/**/target/
+/**/doc/
+/**/bin/
+/**/build/
+/**/lib/
+/**/test-output/
+/**/allure-results/
+/**/report/
+/**/.classpath
+/**/.project
+/**/.checkstyle
+/**/reports
+/**/af.reporting
+/**/.idea/
+/**/*.iml
+/**/*.ucls
+
+# Ignore binary
+/.allure/
+*.bin
+*.exe
+
+# Ignore log
+# *.log
+*.log.[1234567890]
+
+# Ignore IntelliJ IDEA Config Files
+*.stackdump
+
+# Ignore Picture
+*.bmp
+#*.png
+*.jpg
+*.jpeg
+
+# Ignore doc/notes.txt, but not doc/info/arch.txt
+# doc/*.txt
+
+# Ignore all .txt files in the directory doc/
+# doc/**/*.txt
+
+# Ignore .doc .pfd .docx
+*.doc
+*.docx
+*.pdf
+
+# bower
+/bower_components/
+/**/bower_components/
+
+# npm
+/node_modules/
+/**/node_modules/
